20-routing/envoy/01-system-setup/00-gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy-gw
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
