20-routing/envoy/01-system-setup/01-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: my-envoy-gateway
  namespace: envoy-gateway-system  # Co-located with the controller
spec:
  gatewayClassName: envoy-gw
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All # Allow all namespaces to use this gateway
    - name: https
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: allsvc-tls-secret-envoy # Ensure this secret exists if using HTTPS
